--- a/public/home/index.html
+++ b/public/home/index.html
@@ -16,7 +16,8 @@
         <nav class="container">
             <div class="logo">Shikshan Sahayak</div>
             <div class="auth-buttons">
-                <a href="/public/student/student.html" target="_blank" class="btn btn-login">Student Login</a>
+                <a href="file:///C:/Users/bhave/Desktop/SIH2025/SIH-project/public/student/student.html" target="_blank" class="btn">Student Login</a>
+                <a href="file:///C:/Users/bhave/Desktop/SIH2025/SIH-project/public/teacher/teacher.html" target="_blank" class="btn">Teacher Login</a>
                 <a href="#" class="btn btn-login">Login</a>
                 <a href="#" class="btn btn-signup">Sign Up</a>
             </div>
@@ -31,7 +32,7 @@
                     <h1>Revolutionize Learning with AI-Powered Curriculum</h1>
                     <p>Transform your educational experience with our intelligent curriculum management system. Personalized learning paths, real-time progress tracking, and adaptive content delivery for modern learners.</p>
                     <div class="hero-buttons">
-                        <a href="#" class="btn btn-primary">Get Started Free</a>
+                        <!-- <a href="#" class="btn btn-primary">Get Started Free</a> -->
                     </div>
                 </div>
                 <div class="hero-visual">
@@ -92,7 +93,7 @@
                 <div class="feature-item">
                     <div class="feature-icon">🔒</div>
                     <h3>Enterprise Security</h3>
-                    <p>Bank-level security with end-to-end encryption, GDPR compliance, and robust data protection measures for educational institutions.</p>
+                    <p>Ensuring security in schools is essential for creating a safe and nurturing environment where students can learn and grow without fear. Our platform employs advanced security measures, including data encryption, user authentication, and regular security audits, to protect sensitive information and maintain a secure learning environment.</p>
                 </div>
             </div>
         </div>
